***NOTICE*** This is a work in progress commit, private stryker will not work correctly ***NOTICE***
- 	Created a new test builder class (tools.TestBuilder) for building tests, this class
	is based on JUnitStage and TacoMain.editTestFileToCompile method.

	Tests are now created based on a template (testClassTemplate.java).

-	Created a class to find/add/remove an empty constructor on a java file
	this new functionality is used to ensure that all classes to repair have an empty
	constructor that will be used while writting and running tests.

-	Added an almost completly rewritten version of tools.Reloader class from MuJava

-	Added latest jar version of comitaco

-	Prototype code to running a test for rac has been added to the RacAPI runJunit method
	the final code will be based on this new code (the current code is only meant for testing
	and making RAC work).

-	Added properties for tests and the corresponding methods in StrykerConfig (fixes are required)

-	Change proyect compliance to jre 1.7